CV after Bluestone 1.0

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,7 @@
   .description {
     margin: 5mm 0;
     text-align: justify;
+    line-height: 20pt;
   }
 }
 
@@ -88,12 +89,21 @@
     display: flex;
     flex-wrap: wrap;
 
-    .item {
+    .strong-item {
       margin: 1mm;
       padding: 1mm 2mm;
       border: 0.5mm solid #cccccc;
       border-radius: 2mm;
       font-weight: 700;
+    }
+
+    .item {
+      font-size: 8pt;
+      margin: 1mm;
+      padding: 1mm 2mm;
+      border: 0.5mm solid #cccccc;
+      border-radius: 2mm;
+      font-weight: 400;
     }
   }
 
